tests/fail/index_out_of_bounds.werk
let a = ["a", "b", "c"]
let d = a[3]
